fix positioning on mobile

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -51,7 +51,7 @@ body {
 }
 
 #about-dialog {
-  position: fixed;
+  position: absolute;
   left: 50%;
   top: 50%;
   padding: 1rem;
